Enable polyfill.min.js

--- a/webcomponents/index.html
+++ b/webcomponents/index.html
@@ -9,7 +9,7 @@
 <script nomodule src="/node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
 
 <!-- This is the Babel polyfill for es6 features in es5 browsers -->
-<!-- <script nomodule src="./polyfill.min.js"></script> -->
+<script nomodule src="./polyfill.min.js"></script>
 
 <!-- Webcomponents polyfill -->
 <script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
